--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto",
   "version": "1.0.0",
-  "description": "### Обзор * Описание * Технологии * Ссылка на GitHub Pages",
+  "description": "Проект Mesto, где вы можете добавлять фотографии из путешествий",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
